Adição das Habilidades e Categorias

--- a/src/components/Provas/form.html
+++ b/src/components/Provas/form.html
@@ -6,7 +6,7 @@
     <nav>
       <div class="nav-wrapper">
         <div class="col s12">
-          <a href="#/">Banco de questões</a> >
+          <a href="#/">Banco de Questões</a> >
           <a href="#/provas">Provas</a> >
           <span>Criar provas</span>
         </div>
@@ -21,7 +21,7 @@
         </div>
         <div class="input-field col s3">
           <select class="browser-default">
-            <option value="" disabled selected>Selecione a área</option>
+            <option value="" disabled selected>Selecione a Área</option>
             <option value="1">Lingua Portuguesa</option>
             <option value="2">Matemática</option>
           </select>
@@ -29,7 +29,7 @@
         </div>
         <div class="input-field col s2">
           <select class="browser-default">
-            <option value="" disabled selected>Selecione a série</option>
+            <option value="" disabled selected>Selecione a Série</option>
             <option value="1">5º Ano</option>
             <option value="2">9º Ano</option>
           </select>
@@ -37,7 +37,7 @@
         </div>
         <div class="input-field col s1 ">
           <select class="browser-default">
-            <option value="" disabled selected>Slecione o nível</option>
+            <option value="" disabled selected>Selecione Nível</option>
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -54,19 +54,44 @@
         </div>
         <div class="input-field col s3">
           <select class="browser-default">
-            <option value="" disabled selected>Choose your option</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
+            <option value="" disabled selected>Selecione a Categoria</option>
+            <option value="1">Números e Operações</option>
+            <option value="2">Tratamento da Informação</option>
+            <option value="3">Grandezas e Medidas</option>
+            <option value="4">Espaços e Formas</option>
+            <option value="5">Tratamento de Informações</option>
           </select>
           <label v-for="" class="active">Categoria</label>
         </div>
         <div class="input-field col s3">
           <select class="browser-default">
-            <option value="" disabled selected>Choose your option</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
+            <option value="" disabled selected>Selecione a Habilidades</option>
+            <option value="1">D16 - Identificar a localização de números inteiros na
+              reta numérica.</option>
+            <option value="2">D17 - Identificar a localização de números racionais na
+              reta numérica.</option>
+            <option value="3">D18 - Efetuar cálculos com números inteiros,
+              envolvendo as operações (adição, subtração,
+              multiplicação, divisão, potenciação).</option>
+            <option value="4">D19 - Resolver problema com números naturais,
+              envolvendo diferentes significados das operações
+              (adição, subtracão, multiplicação, divisão,
+              potenciação).</option>
+            <option valeu="5">D20 - Resolver problema com números inteiros
+              envolvendo as operações (adição, subtracão,
+              multiplicação, divisão, potenciação).</option>
+            <option valeu="6">D21 - Reconhecer as diferentes representações de um
+              número racional.</option>
+            <option valeu="7">D22 - Identificar fração como representação que pode
+              estar associada a diferentes significados.</option>
+            <option value="8" >D23 - Identificar frações equivalentes.</option>
+            <option value="9" > D24 - Reconhecer as representações decimais dos
+              números racionais como uma extensão do sistema de
+              numeração decimal, identificando a existência de
+              "ordens" como décimos, centésimos e milésimos.</option>
+            <option value="10" >D25 - Efetuar cálculos que envolvam operações com
+              números racionais (adição, subtracão, multiplicação,
+              divisão, potenciação).</option>
           </select>
           <label v-for="" class="active">Habilidades</label>
         </div>
