Alteração de Cores

--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -38,7 +38,7 @@
         </div>
         <div class="input-field col s1 ">
           <select class="browser-default">
-            <option value="" disabled selected>Slecione o nível</option>
+            <option value="" disabled selected>Selecione o nível</option>
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -55,25 +55,50 @@
         </div>
         <div class="input-field col s3">
           <select class="browser-default">
-            <option value="" disabled selected>Choose your option</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
+            <option value="" disabled selected>Selecione a Categoria</option>
+            <option value="1">Números e Operações</option>
+            <option value="2">Tratamento da Informação</option>
+            <option value="3">Grandezas e Medidas</option>
+            <option value="4">Espaços e Formas</option>
+            <option value="5">Tratamento de Informações</option>
           </select>
           <label v-for="" class="active">Categoria</label>
         </div>
         <div class="input-field col s3">
           <select class="browser-default">
-            <option value="" disabled selected>Choose your option</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
+            <option value="" disabled selected>Selecione a Habilidades</option>
+            <option value="1">D16 - Identificar a localização de números inteiros na
+              reta numérica.</option>
+            <option value="2">D17 - Identificar a localização de números racionais na
+              reta numérica.</option>
+            <option value="3">D18 - Efetuar cálculos com números inteiros,
+              envolvendo as operações (adição, subtração,
+              multiplicação, divisão, potenciação).</option>
+            <option value="4">D19 - Resolver problema com números naturais,
+              envolvendo diferentes significados das operações
+              (adição, subtracão, multiplicação, divisão,
+              potenciação).</option>
+            <option valeu="5">D20 - Resolver problema com números inteiros
+              envolvendo as operações (adição, subtracão,
+              multiplicação, divisão, potenciação).</option>
+            <option valeu="6">D21 - Reconhecer as diferentes representações de um
+              número racional.</option>
+            <option valeu="7">D22 - Identificar fração como representação que pode
+              estar associada a diferentes significados.</option>
+            <option value="8" >D23 - Identificar frações equivalentes.</option>
+            <option value="9" > D24 - Reconhecer as representações decimais dos
+              números racionais como uma extensão do sistema de
+              numeração decimal, identificando a existência de
+              "ordens" como décimos, centésimos e milésimos.</option>
+            <option value="10" >D25 - Efetuar cálculos que envolvam operações com
+              números racionais (adição, subtracão, multiplicação,
+              divisão, potenciação).</option>
           </select>
-          <label v-for="" class="active">Abilidades</label>
+          <label v-for="" class="active">Habilidades</label>
         </div>
 
         <div class="input-field col s6">
-          <input type="submit" class="waves-effect waves-light btn-large blue-grey darken-4" value="Pesquisar">
+          <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Adicionar">
         </div>
         <div id="div_chip">
         <div v-for="todo in todos" class="chip">
