--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -16,10 +16,6 @@
   <div class="card col s12">
     <div class="card-content">
       <form class="row" autocomplete="on">
-        <div class="input-field col s10">
-          <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="textarea1" class="active">Enunciado</label>
-        </div>
         <div class="input-field col s3">
           <select class="browser-default">
             <option value="" disabled selected>Selecione a área</option>
@@ -96,7 +92,50 @@
           </select>
           <label v-for="" class="active">Habilidades</label>
         </div>
-
+        <div class="input-field col s12">
+          <textarea id="enuciado" class="materialize-textarea"></textarea>
+          <label for="enuciado" class="active">ENUCIADO DA QUESTÃO</label>
+        </div>
+        <div class="input-field col s9">
+          <textarea id="alternativa1" class="materialize-textarea"></textarea>
+          <label for="alternativa1" class="active">1º ALTERNATIVA</label>
+        </div>
+        <div class="input-field col s3">
+        <p>
+          <input type="checkbox"  class="filled-in" id="correta1" />
+          <label for="correta1">Alternativa correta</label>
+        </p>
+        </div>
+        <div class="input-field col s9">
+          <textarea id="alternativa2" class="materialize-textarea"></textarea>
+          <label for="alternativa2" class="active">2º ALTERNATIVA</label>
+        </div>
+        <div class="input-field col s3">
+          <p>
+            <input type="checkbox" class="filled-in" id="correta2" />
+            <label for="correta2">Alternativa correta</label>
+          </p>
+        </div>
+        <div class="input-field col s9">
+          <textarea id="alternativa3" class="materialize-textarea"></textarea>
+          <label for="alternativa3" class="active">3º ALTERNATIVA</label>
+        </div>
+        <div class="input-field col s3">
+          <p>
+            <input type="checkbox" class="filled-in" id="correta3" />
+            <label for="correta3">Alternativa correta</label>
+          </p>
+        </div>
+        <div class="input-field col s9">
+          <textarea id="alternativa4" class="materialize-textarea"></textarea>
+          <label for="alternativa4" class="active">4º ALTERNATIVA</label>
+        </div>
+        <div class="input-field col s3">
+          <p>
+            <input type="checkbox" class="filled-in" id="correta4" />
+            <label for="correta4">Alternativa correta</label>
+          </p>
+        </div>
         <div class="input-field col s6">
           <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Adicionar">
         </div>
