--- a/src/components/Provas/form.html
+++ b/src/components/Provas/form.html
@@ -17,7 +17,7 @@
     <div class="card-content">
       <form class="row" autocomplete="on">
         <div class="input-field col s12">
-          <h5>Dados de filtro de questões</h5>
+          <h5>Filtro de Questões</h5>
         </div>
         <div class="input-field col s3">
           <select class="browser-default">
@@ -97,7 +97,7 @@
         </div>
 
         <div class="input-field col s6">
-          <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Pesquisar">
+          <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Montar Prova">
         </div>
         <div id="div_chip">
         <div v-for="todo in todos" class="chip">
