Alteração de cores

--- a/src/components/Provas/form.html
+++ b/src/components/Provas/form.html
@@ -97,7 +97,7 @@
         </div>
 
         <div class="input-field col s6">
-          <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Montar Prova">
+          <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Gerar Prova">
         </div>
         <div id="div_chip">
         <div v-for="todo in todos" class="chip">
