--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -101,10 +101,10 @@
           <label for="alternativa1" class="active">1º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
-        <p>
-          <input type="checkbox" name="gender" class="filled-in" id="correta1" />
-          <label for="correta1">Alternativa correta</label>
-        </p>
+          <p>
+            <input class="with-gap" name="group1" type="radio" id="correta1"  />
+            <label for="correta1">Alternativa Correta</label>
+          </p>
         </div>
         <div class="input-field col s9">
           <textarea id="alternativa2" class="materialize-textarea"></textarea>
@@ -112,8 +112,8 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input type="checkbox" name="gender" class="filled-in" id="correta2" />
-            <label for="correta2">Alternativa correta</label>
+            <input class="with-gap" name="group1" type="radio" id="correta2"  />
+            <label for="correta2">Alternativa Correta</label>
           </p>
         </div>
         <div class="input-field col s9">
@@ -122,8 +122,8 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input type="checkbox" class="filled-in" id="correta3" />
-            <label for="correta3">Alternativa correta</label>
+            <input class="with-gap" name="group1" type="radio" id="correta3"  />
+            <label for="correta3">Alternativa Correta</label>
           </p>
         </div>
         <div class="input-field col s9">
@@ -132,8 +132,8 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input type="checkbox" class="filled-in" id="correta4" />
-            <label for="correta4">Alternativa correta</label>
+            <input class="with-gap" name="group1" type="radio" id="correta4"  />
+            <label for="correta4">Alternativa Correta</label>
           </p>
         </div>
         <div class="input-field col s6">
