--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -102,7 +102,7 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input class="with-gap" name="group1" type="radio" id="correta1"  />
+            <input name="group1" type="radio" id="correta1" />
             <label for="correta1">Alternativa Correta</label>
           </p>
         </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input class="with-gap" name="group1" type="radio" id="correta2"  />
+            <input name="group1" type="radio" id="correta2" />
             <label for="correta2">Alternativa Correta</label>
           </p>
         </div>
@@ -132,8 +132,8 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input class="with-gap" name="group1" type="radio" id="correta4"  />
-            <label for="correta4">Alternativa Correta</label>
+            <input class="with-gap" name="group1" type="radio" id="correta"  />
+            <label for="correta3">Alternativa Correta</label>
           </p>
         </div>
         <div class="input-field col s6">
