--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -102,7 +102,7 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input name="group1" type="radio" id="correta1" />
+            <input class="with-gap" name="group1" type="radio" id="correta1"  />
             <label for="correta1">Alternativa Correta</label>
           </p>
         </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input name="group1" type="radio" id="correta2" />
+            <input class="with-gap" name="group1" type="radio" id="correta2"  />
             <label for="correta2">Alternativa Correta</label>
           </p>
         </div>
@@ -132,12 +132,12 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input class="with-gap" name="group1" type="radio" id="correta"  />
-            <label for="correta3">Alternativa Correta</label>
+            <input class="with-gap" name="group1" type="radio" id="correta4"  />
+            <label for="correta4">Alternativa Correta</label>
           </p>
         </div>
         <div class="input-field col s6">
-          <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Adicionar">
+          <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Salvar">
         </div>
         <div id="div_chip">
         <div v-for="todo in todos" class="chip">
