alteracoes no form e create

--- a/src/components/Provas/form.html
+++ b/src/components/Provas/form.html
@@ -67,78 +67,50 @@
           <select class="browser-default">
             <option value="" disabled selected>Selecione a Habilidades</option>
             <option value="1">D16 - Identificar a localização de números inteiros na
-              reta numérica.</option>
+              reta numérica.
+            </option>
             <option value="2">D17 - Identificar a localização de números racionais na
-              reta numérica.</option>
+              reta numérica.
+            </option>
             <option value="3">D18 - Efetuar cálculos com números inteiros,
               envolvendo as operações (adição, subtração,
-              multiplicação, divisão, potenciação).</option>
+              multiplicação, divisão, potenciação).
+            </option>
             <option value="4">D19 - Resolver problema com números naturais,
               envolvendo diferentes significados das operações
               (adição, subtracão, multiplicação, divisão,
-              potenciação).</option>
+              potenciação).
+            </option>
             <option valeu="5">D20 - Resolver problema com números inteiros
               envolvendo as operações (adição, subtracão,
-              multiplicação, divisão, potenciação).</option>
+              multiplicação, divisão, potenciação).
+            </option>
             <option valeu="6">D21 - Reconhecer as diferentes representações de um
-              número racional.</option>
+              número racional.
+            </option>
             <option valeu="7">D22 - Identificar fração como representação que pode
-              estar associada a diferentes significados.</option>
-            <option value="8" >D23 - Identificar frações equivalentes.</option>
-            <option value="9" > D24 - Reconhecer as representações decimais dos
+              estar associada a diferentes significados.
+            </option>
+            <option value="8">D23 - Identificar frações equivalentes.</option>
+            <option value="9"> D24 - Reconhecer as representações decimais dos
               números racionais como uma extensão do sistema de
               numeração decimal, identificando a existência de
-              "ordens" como décimos, centésimos e milésimos.</option>
-            <option value="10" >D25 - Efetuar cálculos que envolvam operações com
+              "ordens" como décimos, centésimos e milésimos.
+            </option>
+            <option value="10">D25 - Efetuar cálculos que envolvam operações com
               números racionais (adição, subtracão, multiplicação,
-              divisão, potenciação).</option>
+              divisão, potenciação).
+            </option>
           </select>
           <label v-for="" class="active">Habilidades</label>
         </div>
         <div class="input-field col s6">
           <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Gerar Prova">
         </div>
-        <div id="div_chip">
-        <div v-for="todo in todos" class="chip">
-          {{todo.text}}
-          <i class="close material-icons ion-ios-close-circle"></i>
-        </div>
-        </div>
-        <!--<div>
-          <div class="input-field col s6">
-            <input type="text" id="title" class="validate" placeholder="Como você prefere identificar esta conta?"
-                   required>
-            <label for="title" class="active">Título da conta</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="text" id="balance_initial" class="validate" placeholder="Qual o valor inicial desta conta?"
-                   required>
-            <label for="title" class="active">Valor inicial</label>
-          </div>
-          <div class="input-field col s6">
-            <select class="browser-default">
-              <option value="0">Escolha um banco</option>
-              <option class="left circle">Banco (000)</option>
-            </select>
-            <label for="" class="active">Qual seu banco?</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="number" id="agency" class="validate" placeholder="Qual o número da sua agencia?" required>
-            <label for="agency" class="active">Número da agência</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="number" id="account_number" class="validate" placeholder="Qual o número da sua conta?"
-                   required>
-            <label for="accont_number" class="active">Número da conta</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="submit" class="waves-effect waves-light btn-large blue-grey darken-4" value="salvar">
-          </div>
-        </div>-->
       </form>
+    </div>
+    <div class="card-action">
+      <a href="#/provas">Voltar</a>
+    </div>
   </div>
-  <div class="card-action">
-    <a href="#/provas">Voltar</a>
-  </div>
-</div>
 </div>
