--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -17,21 +17,21 @@
     <div class="card-content">
       <form class="row" autocomplete="on">
         <div class="input-field col s3">
-          <select class="browser-default">
+          <select v-model="questao.area" class="browser-default">
             <option value="" disabled selected>Selecione a área</option>
             <option v-for="area in areas.data">{{area.area}}</option>
           </select>
           <label v-for="" class="active">Área</label>
         </div>
         <div class="input-field col s2">
-          <select class="browser-default">
+          <select v-model="questao.serie" class="browser-default">
             <option value="" disabled selected>Selecione a série</option>
             <option v-for="serie in series.data">{{serie.serie}}</option>
           </select>
           <label v-for="" class="active">Série</label>
         </div>
         <div class="input-field col s1 ">
-          <select class="browser-default">
+          <select v-model="questao.nivel" class="browser-default">
             <option value="" disabled selected>Selecione o nível</option>
             <option value="0">0</option>
             <option value="1">1</option>
@@ -48,7 +48,7 @@
           <label v-for="" class="active">Nível</label>
         </div>
         <div class="input-field col s3">
-          <select class="browser-default">
+          <select v-model="questao.categoria" class="browser-default">
             <option value="" disabled selected>Selecione a Categoria</option>
             <option value="1">Números e Operações</option>
             <option value="2">Tratamento da Informação</option>
@@ -59,7 +59,7 @@
           <label v-for="" class="active">Categoria</label>
         </div>
         <div class="input-field col s3">
-          <select class="browser-default">
+          <select v-model="questao.habilidade" class="browser-default">
             <option value="" disabled selected>Selecione a Habilidades</option>
             <option value="1">D16 - Identificar a localização de números inteiros na
               reta numérica.</option>
@@ -91,93 +91,57 @@
           <label v-for="" class="active">Habilidades</label>
         </div>
         <div class="input-field col s12">
-          <textarea id="enuciado" class="materialize-textarea"></textarea>
+          <textarea v-model="enunciado.enunciado" id="enuciado" class="materialize-textarea"></textarea>
           <label for="enuciado" class="active">ENUCIADO DA QUESTÃO</label>
         </div>
         <div class="input-field col s9">
-          <textarea id="alternativa1" class="materialize-textarea"></textarea>
+          <textarea v-model="alternativa1.alternativa" id="alternativa1" class="materialize-textarea"></textarea>
           <label for="alternativa1" class="active">1º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
         <p>
-          <input type="checkbox" name="gender" class="filled-in" id="correta1" />
+          <input v-model="alternativa1.correta" type="radio" name="gender" class="filled-in" id="correta1" />
           <label for="correta1">Alternativa correta</label>
         </p>
         </div>
         <div class="input-field col s9">
-          <textarea id="alternativa2" class="materialize-textarea"></textarea>
+          <textarea v-model="alternativa2.alternativa" id="alternativa2" class="materialize-textarea"></textarea>
           <label for="alternativa2" class="active">2º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
           <p>
-            <input type="checkbox" name="gender" class="filled-in" id="correta2" />
+            <input v-model="alternativa2.correta" type="radio" name="gender" class="filled-in" id="correta2" />
             <label for="correta2">Alternativa correta</label>
           </p>
         </div>
         <div class="input-field col s9">
-          <textarea id="alternativa3" class="materialize-textarea"></textarea>
+          <textarea v-model="alternativa3.alternativa" id="alternativa3" class="materialize-textarea"></textarea>
           <label for="alternativa3" class="active">3º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
           <p>
-            <input type="checkbox" class="filled-in" id="correta3" />
+            <input v-model="alternativa3.correta" type="radio" name="gender" class="filled-in" id="correta3" />
             <label for="correta3">Alternativa correta</label>
           </p>
         </div>
         <div class="input-field col s9">
-          <textarea id="alternativa4" class="materialize-textarea"></textarea>
+          <textarea v-model="alternativa4.alternativa" id="alternativa4" class="materialize-textarea"></textarea>
           <label for="alternativa4" class="active">4º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
           <p>
-            <input type="checkbox" class="filled-in" id="correta4" />
+            <input v-model="alternativa4.correta" type="radio" name="gender" class="filled-in" id="correta4" />
             <label for="correta4">Alternativa correta</label>
           </p>
         </div>
         <div class="input-field col s6">
           <input type="submit" class="waves-effect waves-light btn-large  indigo accent-1 darken-4" value="Adicionar">
         </div>
-        <div id="div_chip">
-        <div v-for="todo in todos" class="chip">
-          {{todo.text}}
-          <i class="close material-icons ion-ios-close-circle"></i>
-        </div>
-        </div>
-        <!--<div>
-          <div class="input-field col s6">
-            <input type="text" id="title" class="validate" placeholder="Como você prefere identificar esta conta?"
-                   required>
-            <label for="title" class="active">Título da conta</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="text" id="balance_initial" class="validate" placeholder="Qual o valor inicial desta conta?"
-                   required>
-            <label for="title" class="active">Valor inicial</label>
-          </div>
-          <div class="input-field col s6">
-            <select class="browser-default">
-              <option value="0">Escolha um banco</option>
-              <option class="left circle">Banco (000)</option>
-            </select>
-            <label for="" class="active">Qual seu banco?</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="number" id="agency" class="validate" placeholder="Qual o número da sua agencia?" required>
-            <label for="agency" class="active">Número da agência</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="number" id="account_number" class="validate" placeholder="Qual o número da sua conta?"
-                   required>
-            <label for="accont_number" class="active">Número da conta</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="submit" class="waves-effect waves-light btn-large blue-grey darken-4" value="salvar">
-          </div>
-        </div>-->
+
       </form>
   </div>
   <div class="card-action">
-    <a href="#/provas">Voltar</a>
+    <a href="#/questoes">Voltar</a>
   </div>
 </div>
 </div>
