Alteração de Botões

--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -100,7 +100,7 @@
         </div>
         <div class="input-field col s3">
         <p>
-          <input v-model="alternativa1.correta" type="radio" name="gender" class="filled-in" id="correta1" />
+          <input v-model="alternativa1.correta" type="radio" name="gender" class="with-gap" id="correta1" />
           <label for="correta1">Alternativa correta</label>
         </p>
         </div>
@@ -110,7 +110,7 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input v-model="alternativa2.correta" type="radio" name="gender" class="filled-in" id="correta2" />
+            <input v-model="alternativa2.correta" type="radio" name="gender" class="with-gap" id="correta2" />
             <label for="correta2">Alternativa correta</label>
           </p>
         </div>
@@ -120,7 +120,7 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input v-model="alternativa3.correta" type="radio" name="gender" class="filled-in" id="correta3" />
+            <input v-model="alternativa3.correta" type="radio" name="gender" class="with-gap" id="correta3" />
             <label for="correta3">Alternativa correta</label>
           </p>
         </div>
@@ -130,7 +130,7 @@
         </div>
         <div class="input-field col s3">
           <p>
-            <input v-model="alternativa4.correta" type="radio" name="gender" class="filled-in" id="correta4" />
+            <input v-model="alternativa4.correta" type="radio" name="gender" class="with-gap" id="correta4" />
             <label for="correta4">Alternativa correta</label>
           </p>
         </div>
