--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -15,23 +15,23 @@
   </div>
   <div class="card col s12">
     <div class="card-content">
-      <form class="row" autocomplete="on">
+      <form class="row" autocomplete="on" @submit.prevent="save">
         <div class="input-field col s3">
-          <select v-model="questao.area" class="browser-default">
+          <select v-model="questao.idarea" id="idarea" class="browser-default">
             <option value="" disabled selected>Selecione a área</option>
-            <option v-for="area in areas.data">{{area.area}}</option>
+            <option v-for="area in areas.data" :value="area.id">{{area.area}}</option>
           </select>
           <label v-for="" class="active">Área</label>
         </div>
         <div class="input-field col s2">
-          <select v-model="questao.serie" class="browser-default">
+          <select v-model="questao.idserie" id="idserie" class="browser-default">
             <option value="" disabled selected>Selecione a série</option>
-            <option v-for="serie in series.data">{{serie.serie}}</option>
+            <option v-for="serie in series.data" :value="serie.id">{{serie.serie}}</option>
           </select>
           <label v-for="" class="active">Série</label>
         </div>
         <div class="input-field col s1 ">
-          <select v-model="questao.nivel" class="browser-default">
+          <select v-model="questao.idnivel" id="idnivel" class="browser-default">
             <option value="" disabled selected>Selecione o nível</option>
             <option value="0">0</option>
             <option value="1">1</option>
@@ -48,7 +48,7 @@
           <label v-for="" class="active">Nível</label>
         </div>
         <div class="input-field col s3">
-          <select v-model="questao.categoria" class="browser-default">
+          <select v-model="questao.idcategoria" id="idcategoria" class="browser-default">
             <option value="" disabled selected>Selecione a Categoria</option>
             <option value="1">Números e Operações</option>
             <option value="2">Tratamento da Informação</option>
@@ -59,78 +59,87 @@
           <label v-for="" class="active">Categoria</label>
         </div>
         <div class="input-field col s3">
-          <select v-model="questao.habilidade" class="browser-default">
+          <select v-model="questao.idhabilidade" id="idhabilidade" class="browser-default">
             <option value="" disabled selected>Selecione a Habilidades</option>
             <option value="1">D16 - Identificar a localização de números inteiros na
-              reta numérica.</option>
+              reta numérica.
+            </option>
             <option value="2">D17 - Identificar a localização de números racionais na
-              reta numérica.</option>
+              reta numérica.
+            </option>
             <option value="3">D18 - Efetuar cálculos com números inteiros,
               envolvendo as operações (adição, subtração,
-              multiplicação, divisão, potenciação).</option>
+              multiplicação, divisão, potenciação).
+            </option>
             <option value="4">D19 - Resolver problema com números naturais,
               envolvendo diferentes significados das operações
               (adição, subtracão, multiplicação, divisão,
-              potenciação).</option>
-            <option valeu="5">D20 - Resolver problema com números inteiros
+              potenciação).
+            </option>
+            <option value="5">D20 - Resolver problema com números inteiros
               envolvendo as operações (adição, subtracão,
-              multiplicação, divisão, potenciação).</option>
-            <option valeu="6">D21 - Reconhecer as diferentes representações de um
-              número racional.</option>
-            <option valeu="7">D22 - Identificar fração como representação que pode
-              estar associada a diferentes significados.</option>
-            <option value="8" >D23 - Identificar frações equivalentes.</option>
-            <option value="9" > D24 - Reconhecer as representações decimais dos
+              multiplicação, divisão, potenciação).
+            </option>
+            <option value="6">D21 - Reconhecer as diferentes representações de um
+              número racional.
+            </option>
+            <option value="7">D22 - Identificar fração como representação que pode
+              estar associada a diferentes significados.
+            </option>
+            <option value="8">D23 - Identificar frações equivalentes.</option>
+            <option value="9"> D24 - Reconhecer as representações decimais dos
               números racionais como uma extensão do sistema de
               numeração decimal, identificando a existência de
-              "ordens" como décimos, centésimos e milésimos.</option>
-            <option value="10" >D25 - Efetuar cálculos que envolvam operações com
+              "ordens" como décimos, centésimos e milésimos.
+            </option>
+            <option value="10">D25 - Efetuar cálculos que envolvam operações com
               números racionais (adição, subtracão, multiplicação,
-              divisão, potenciação).</option>
+              divisão, potenciação).
+            </option>
           </select>
           <label v-for="" class="active">Habilidades</label>
         </div>
         <div class="input-field col s12">
-          <textarea v-model="enunciado.enunciado" id="enuciado" class="materialize-textarea"></textarea>
+          <textarea v-model="questao.enunciado" id="enuciado" class="materialize-textarea"></textarea>
           <label for="enuciado" class="active">ENUCIADO DA QUESTÃO</label>
         </div>
         <div class="input-field col s9">
-          <textarea v-model="alternativa1.alternativa" id="alternativa1" class="materialize-textarea"></textarea>
+          <textarea v-model="questao.alternativa1" id="alternativa1" class="materialize-textarea"></textarea>
           <label for="alternativa1" class="active">1º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
-        <p>
-          <input v-model="alternativa1.correta" type="radio" name="gender" class="with-gap" id="correta1" />
-          <label for="correta1">Alternativa correta</label>
-        </p>
+          <p>
+            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta1"/>
+            <label for="correta1">Alternativa correta</label>
+          </p>
         </div>
         <div class="input-field col s9">
-          <textarea v-model="alternativa2.alternativa" id="alternativa2" class="materialize-textarea"></textarea>
+          <textarea v-model="questao.alternativa2" id="alternativa2" class="materialize-textarea"></textarea>
           <label for="alternativa2" class="active">2º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
           <p>
-            <input v-model="alternativa2.correta" type="radio" name="gender" class="with-gap" id="correta2" />
+            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta2"/>
             <label for="correta2">Alternativa correta</label>
           </p>
         </div>
         <div class="input-field col s9">
-          <textarea v-model="alternativa3.alternativa" id="alternativa3" class="materialize-textarea"></textarea>
+          <textarea v-model="questao.alternativa3" id="alternativa3" class="materialize-textarea"></textarea>
           <label for="alternativa3" class="active">3º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
           <p>
-            <input v-model="alternativa3.correta" type="radio" name="gender" class="with-gap" id="correta3" />
+            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta3"/>
             <label for="correta3">Alternativa correta</label>
           </p>
         </div>
         <div class="input-field col s9">
-          <textarea v-model="alternativa4.alternativa" id="alternativa4" class="materialize-textarea"></textarea>
+          <textarea v-model="questao.alternativa4" id="alternativa4" class="materialize-textarea"></textarea>
           <label for="alternativa4" class="active">4º ALTERNATIVA</label>
         </div>
         <div class="input-field col s3">
           <p>
-            <input v-model="alternativa4.correta" type="radio" name="gender" class="with-gap" id="correta4" />
+            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta4"/>
             <label for="correta4">Alternativa correta</label>
           </p>
         </div>
@@ -139,9 +148,9 @@
         </div>
 
       </form>
+    </div>
+    <div class="card-action">
+      <a href="#/questoes">Voltar</a>
+    </div>
   </div>
-  <div class="card-action">
-    <a href="#/questoes">Voltar</a>
-  </div>
-</div>
 </div>
