--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -99,47 +99,128 @@
           </select>
           <label v-for="" class="active">Habilidades</label>
         </div>
-        <div class="input-field col s12">
+        <div class="input-field col s9">
           <textarea v-model="questao.enunciado" id="enuciado" class="materialize-textarea"></textarea>
           <label for="enuciado" class="active">ENUCIADO DA QUESTÃO</label>
         </div>
-        <div class="input-field col s9">
+
+    <div>
+    <div class="input-field col s3">
+      <form action="#">
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>Arquivo</span>
+            <input type="file" accept="image/png, image/jpeg">
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text" placeholder="Carregar">
+          </div>
+        </div>
+      </form>
+    </div>
+
+        <div class="input-field col s7">
           <textarea v-model="questao.alternativa1" id="alternativa1" class="materialize-textarea"></textarea>
           <label for="alternativa1" class="active">1º ALTERNATIVA</label>
         </div>
+
+      <div>
         <div class="input-field col s3">
+          <form action="#">
+            <div class="file-field input-field">
+              <div class="btn">
+                <span>Arquivo</span>
+                <input type="file" accept="image/png, image/jpeg">
+              </div>
+              <div class="file-path-wrapper">
+                <input class="file-path validate" type="text" placeholder="Carregar">
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <div class="input-field col s2">
           <p>
-            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta1"/>
+            <input v-model="questao.correta" type="radio" name="gender" class="with-gap" id="correta1"/>
             <label for="correta1">Alternativa correta</label>
           </p>
         </div>
-        <div class="input-field col s9">
+
+        <div class="input-field col s7">
           <textarea v-model="questao.alternativa2" id="alternativa2" class="materialize-textarea"></textarea>
           <label for="alternativa2" class="active">2º ALTERNATIVA</label>
         </div>
-        <div class="input-field col s3">
+
+        <div>
+          <div class="input-field col s3">
+            <form action="#">
+              <div class="file-field input-field">
+                <div class="btn">
+                  <span>Arquivo</span>
+                  <input type="file" accept="image/png, image/jpeg">
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text" placeholder="Carregar">
+                </div>
+              </div>
+            </form>
+          </div>
+
+        <div class="input-field col s2">
           <p>
-            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta2"/>
+            <input v-model="questao.correta" type="radio" name="gender" class="with-gap" id="correta2"/>
             <label for="correta2">Alternativa correta</label>
           </p>
         </div>
-        <div class="input-field col s9">
+        <div class="input-field col s7">
           <textarea v-model="questao.alternativa3" id="alternativa3" class="materialize-textarea"></textarea>
           <label for="alternativa3" class="active">3º ALTERNATIVA</label>
         </div>
-        <div class="input-field col s3">
+
+          <div>
+            <div class="input-field col s3">
+              <form action="#">
+                <div class="file-field input-field">
+                  <div class="btn">
+                    <span>Arquivo</span>
+                    <input type="file" accept="image/png, image/jpeg">
+                  </div>
+                  <div class="file-path-wrapper">
+                    <input class="file-path validate" type="text" placeholder="Carregar">
+                  </div>
+                </div>
+              </form>
+            </div>
+
+        <div class="input-field col s2">
           <p>
-            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta3"/>
+            <input v-model="questao.correta" type="radio" name="gender" class="with-gap" id="correta3"/>
             <label for="correta3">Alternativa correta</label>
           </p>
         </div>
-        <div class="input-field col s9">
+        <div class="input-field col s7">
           <textarea v-model="questao.alternativa4" id="alternativa4" class="materialize-textarea"></textarea>
           <label for="alternativa4" class="active">4º ALTERNATIVA</label>
         </div>
-        <div class="input-field col s3">
+
+            <div>
+              <div class="input-field col s3">
+                <form action="#">
+                  <div class="file-field input-field">
+                    <div class="btn">
+                      <span>Arquivo</span>
+                      <input type="file" accept="image/png, image/jpeg">
+                    </div>
+                    <div class="file-path-wrapper">
+                      <input class="file-path validate" type="text" placeholder="Carregar">
+                    </div>
+                  </div>
+                </form>
+              </div>
+
+        <div class="input-field col s2">
           <p>
-            <input v-model="questao.correta" type="radio" name="gender" class="filled-in" id="correta4"/>
+            <input v-model="questao.correta" type="radio" name="gender" class="with-gap" id="correta4"/>
             <label for="correta4">Alternativa correta</label>
           </p>
         </div>
