Alteração das cores Novo Questão e nova Prova

--- a/src/components/Provas/form.html
+++ b/src/components/Provas/form.html
@@ -4,7 +4,7 @@
       <small>{{ sub_title }}</small>
     </h1>
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper2 row">
         <div class="col s12">
           <a href="#/">Banco de Questões</a> >
           <a href="#/provas">Provas</a> >
